:bug: fixed bullet list alignment issue

--- a/src/sdg/scss/components/_ckeditor.scss
+++ b/src/sdg/scss/components/_ckeditor.scss
@@ -19,6 +19,10 @@
     margin-bottom: 16px;
   }
 
+  li .ck-list-bogus-paragraph {
+    display: inline-block;
+  }
+
   li ul {
     margin-left: 7px,
   }
